package edu.fiuba.algo3.modelo;

public class Derecha implements Direccion {
}
